--- a/index.html
+++ b/index.html
@@ -61,6 +61,7 @@
           <h3>Occupation</h3>
           <h3><b>Pierpoint 10-09-2020 - Present</b></h3>
         </div>
+        <p>TESTE DE COMMIT</p>
       </div>
     
     </div>
