--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <h3><b>Pierpoint 10-09-2020 - Present</b></h3>
         </div>
         <p>TESTE DE COMMits</p>
+        <!--it worked!-->
       </div>
     
     </div>
