--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     />
     <link rel="stylesheet" href="style.css" />
   </head>
-
+<!--Welcome to my HTML file!  div class gang assemble!! -->
   <body>
     <div class="container">
       <div class="content">
@@ -22,10 +22,8 @@
           class="image"
         />
         <div class="me">
-          <div class="name">
-            <p>HARPER STERN</p>
-          </div>
-          <div class="job">
+          <div class="title">
+            <h1>HARPER STERN</h1>
             <p>Cross Product Sales (CPS)</p>
           </div>
         </div>
@@ -34,37 +32,73 @@
            maps: senac location
            mail: senac mail
            whatsapp link: https://faq.whatsapp.com/5913398998672934--> 
-            <a href="https://www.google.com.br/maps/dir//Av.+Tupi,+385+-+Bortot,+Pato+Branco+-+PR,+85504-000/@-26.2094181,-52.7594938,12z/data=!4m8!4m7!1m0!1m5!1m1!1s0x94e552e50e61bff7:0x7e72f0110a65d6e6!2m2!1d-52.6771011!2d-26.2094488?entry=ttu&g_ep=EgoyMDI0MDkxNi4wIKXMDSoASAFQAw%3D%3D">60 Victoria Embankment, London EC4Y 0JP</a>
-          <a href="mailto:stephen.3942@aluno.pr.senac.br"><br>harpersten@pierpoint.com</br></a>
-          <a href="https://wa.me/554699791655"><br>+55 46 1234567891</br></a>
-          <a href="https://github.com/Stephenandgithhub"><br>github.com/harperstern</br></a>
-          <a href="https://www.linkedin.com/in/stephen-a-8036a3287"><br>linkedin.com/harperstern</br></a>
+            <a href="https://www.google.com/maps/place/Senac+Pato+Branco/@-26.2094416,-52.6770923,15z/data=!4m2!3m1!1s0x0:0x7e72f0110a65d6e6?sa=X&ved=1t:2428&ictx=111" target="_blank">Pierpoint Embankment</a>
+          <a href="mailto:stephen.3942@aluno.pr.senac.br" target="_blank"><br>harpersten@pierpoint.com</br></a>
+          <a href="https://wa.me/554699791655" target="_blank">+55 46 1234567891</a>
+          <a href="https://github.com/Stephenandgithhub" target="_blank"><br>github.com/harperstern</br></a>
+          <a href="https://www.linkedin.com/in/stephen-a-8036a3287" target="_blank">linkedin.com/harperstern</a>
         </div>
       </div>
       <div class="overview">
-        <div class="About">
+        <div class="about">
           <h2>Hello! Get to know me</h2>
           <!--About me section reference: https://industry-hbo.fandom.com/wiki/Harper_Stern -->
           <p>
             Harper Stern is an intelligent and talented graduate, who moved from
             New York to London for the opportunity to work at Pierpoint. Assigned
             to the Cross Product Sales (CPS) desk, she is taken under the wing of
-            the CPS managing director Eric Tao. Hi! This is Stephen, I don't know
+            the CPS managing director Eric Tao. Fourth wall break: Hi! This is Stephen, I don't know
             what else to add in my bio, so i'm gonna add some lyrics to one of my
             fav songs Always on My Mind by Pet Shop Boys: Maybe I didn't treat you
             Quite as good as I should Maybe I didn't love you Quite as often as I
             could Little things I should have said and done I never took the time
             You were always on my mind You were always on my mind.
           </p>
+          <hr class="line">
+          <div class="summary"> 
+            <div class="experience">
+              <h3>OCCUPATION</h3>
+              <h4>Macro Trader (Cofounder)</h4>
+              <h5>Leviathan 24/2024 - Present</h5>
+              <p>As a Portfolio Manager and Macro Trader at Leviathan, I analyze macroeconomic trends to inform our investment strategies, contributing to the overall performance of the fund. I have developed and maintained a strong network within the financial industry to facilitate relationships with potential investors, playing a key role in our fundraising efforts and successfully securing capital commitments.</p>
+                <h4>Cross Product Sales (CPS)</h4>
+                <h5>Pierpoint 10/2020 - 19/2022</h5>
+                <p>As a Cross Product Sales (CPS) professional, I specialize in driving revenue growth by leveraging synergies across multiple product lines. My role involves identifying and capitalizing on cross-selling opportunities to enhance customer satisfaction and increase sales performance. I collaborate closely with marketing, product development, and customer service teams to develop comprehensive solutions that meet the diverse needs of clients.</p>
+              </div>
+            <div class="education">
+              <h3>EDUCATION</h3> 
+              <h4>International Business</h4>
+              <h5>Binghamton 10/2017 - 05/2020</h5>
+              <p>Skilled in building and maintaining relationships with stakeholders, clients, and partners across borders, leveraging strong negotiation and interpersonal skills to achieve organizational objectives. Committed to fostering innovation and adapting business strategies to align with evolving global trends. Seeking to leverage comprehensive international business.</p>
+              <h4>Full Stack Developer</h4>
+              <h5>Senac 07/2024 - Present</h5>
+              <p>Pursuing skills in web application development, focusing on creating and implementing projects that enhance user experience. Engaging in the design of wireframes, prototypes, and commercial proposals while building front-end applications, including imagery, layouts, animations, and responsive design. Proficient in front-end languages such as HTML and CSS, present in this project you are seeing.</p>
+            </div>
+          </div> 
+          <hr class="another-line">
+          <div class="last-row"> 
+              <div class="skills">
+                <h3>SKILLS</h3>
+              <ul>
+                <li>Strong Work Ethic (Perfectionist)</li>
+                <li>Risk Management (Self sabotage)</li>
+                <li>Emotional Intelligence (Depressed)</li>
+                <li>Communication Skills (Manipulation)</li>
+              </ul>
+              </div>
+            <div class="languages">
+              <h3>LANGUAGES</h3> 
+              <ul>
+                <li>English - Fluent (New York)</li>
+                <li>English - Fluent (London)</li>
+                <li>English - Fluent (Finance)</li>
+                <li>English - Beginner (Programming)</li>
+              </ul>
+          </div> 
+          </div>
+          <!--Commit test again-->
         </div>
-        <div class="experience">
-          <h3>Occupation</h3>
-          <h3><b>Pierpoint 10-09-2020 - Present</b></h3>
-        </div>
-        <p>TESTE DE COMMits</p>
-        <!--it worked!-->
       </div>
-    
     </div>
   </body>
 </html>
