--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
             New York to London for the opportunity to work at Pierpoint. Assigned
             to the Cross Product Sales (CPS) desk, she is taken under the wing of
             the CPS managing director Eric Tao. Fourth wall break: Hi! This is Stephen, I don't know
-            what else to add in my bio, so i'm gonna add some lyrics to one of my
+            what else to add in her bio, so i'm gonna add some lyrics to one of my
             fav songs Always on My Mind by Pet Shop Boys: Maybe I didn't treat you
             Quite as good as I should Maybe I didn't love you Quite as often as I
             could Little things I should have said and done I never took the time
