--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="me">
           <div class="title">
             <h1>HARPER STERN</h1>
-            <p>Cross Product Sales (CPS)</p>
+            <p>Cross Product Sales CHROMOKOPIA(CPS)</p>
           </div>
         </div>
         <div class="contacts">
